# espander

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_UI_GUIDE.md  LICENSE  README.md  SECURITY.md  espander-update.json  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: release.yml
espander-notifications 2/: README.md  espander-notifications.php  github-oauth.php
src/: App.tsx  custom.css  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/defaults/: about.html  docs.html
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  github_sync.rs  lib.rs  main.rs
src-tauri/src/commands/: about.rs  backup.rs  categories.rs  espanso.rs  gsheet.rs  import_export.rs  mod.rs  permissions.rs  settings.rs  snippets.rs  sync.rs  updater.rs
src-tauri/src/db/: categories.rs  database.rs  mod.rs  schema.rs  settings.rs  snippets.rs
src-tauri/src/espanso/: detector.rs  mod.rs  reloader.rs  yaml_generator.rs
src-tauri/src/github/: api.rs  mod.rs  oauth.rs  repo.rs
src-tauri/src/sync/: gsheet.rs  local.rs  mod.rs  provider.rs
src/components/layout/: AppLayout.tsx  Sidebar.tsx  TopBar.tsx
src/components/settings/: SettingsPage.tsx  (+1 more)
src/lib/: tauri.ts  utils.ts
src/stores/: useCategoryStore.ts  useGlobalTextStore.ts  useNotificationStore.ts  useSettingsStore.ts  useSnippetStore.ts  useSyncStore.ts  useToolsStore.ts  useUIStore.ts  useUpdateStore.ts
src/types/: index.ts
wordpress/espander-notifications/: README.md  espander-notifications.php
(+13 files in other folders)
