[package]
name = "espander"
version = "0.1.0"
description = "Visual manager and sync companion for Espanso"
authors = ["ASHIK HOSEN"]
license = "MIT"
repository = "https://github.com/ashikhosenpro/Expander"
homepage = "https://ashikhosen.com"
edition = "2021"

[lib]
name = "espander_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
tempfile = "3"
keyring = "3"
shellexpand = "3"
